# Aim-Trainer

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  MyGame.sln  README.md  Unique.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  my_game.sln
MyGame/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  MyGame.vcxproj  MyGameApp.cpp  MyGameApp.h  Unit.cpp  Unit.h  cmake_install.cmake  main.cpp  my_game.vcxproj  my_game.vcxproj.filters
MyGame/Assets/Shader/: myFragmentShader.glsl  myVertexShader.glsl
Valor/: CMakeLists.txt  Events.cpp  Events.h  GameWindow.cpp  GameWindow.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  KeyCodes.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Sprite.cpp  Sprite.h  SpriteImplementation.h  Valor.h  Valor.vcxproj  Valor.vcxproj.filters  ValorApp.cpp  ValorApp.h  ValorUtils.h  ValorUtilsh.h  WindowImplementation.cpp  WindowImplementation.h  cmake_install.cmake  pch.h  valor_lib.vcxproj  valor_lib.vcxproj.filters
Valor/Assets/Shader/: myFragmentShader.glsl  myVertexShader.glsl
Valor/GLFWImpl/: GLFWimplementation.cpp  GLFWimplementation.h
Valor/OpenGLImpl/: OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLSprite.cpp  OpenGLSprite.h  Renderer.h
glad/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glad.vcxproj  glad.vcxproj.filters
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  stbi.vcxproj  stbi.vcxproj.filters
